final/styles.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*, *::before, *::after {
    box-sizing: border-box;
}
* {
    margin: 0;
}
body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}
img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
}
input, button, textarea, select {
    font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
}
#root, #__next {
    isolation: isolate;
}

/* Variable Declarations */
:root {
    /* Colors */
    --color--background: #484847;
    --color--text: #fff;
    --color--primary: #7DAF9C;
    --color--secondary: #F2D0A4;

    --color--player-1: #FB4B54;
    --color--player-2: #26437E;
    
    --color--player-1-hover: #ffa8ac;
    --color--player-2-hover: #5c7bb9;
}

/* Light Colors */
@media (prefers-color-scheme: light) {
    :root {
        /* Colors */
        --color--background: #D7D7D6;
        --color--text: #333;
    }
}
body[data-theme='light'] {
    :root {
        /* Colors */
        --color--background: #D7D7D6;
        --color--text: #333;
    }
}

/* Dark Colors */
@media (prefers-color-scheme: dark) {
    :root {
        /* Colors */
        --color--background: #484847;
        --color--text: #fff;
    }
}
body[data-theme='dark'] {
    :root {
        /* Colors */
        --color--background: #484847;
        --color--text: #fff;
    }
}

/* Page Styles */
body {
    background-color: var(--color--background);
    color: var(--color--text);

    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 16px;
    line-height: 1.5;
}

*.hidden  {
    display: none !important;
}

/* Menu */
section#menu {
    width: 100vw;
    height: 100vh;
    padding: 1rem;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

form {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

/* div.form-group {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;

    width: 100%;
}

div.form-group>* {
    align-self: center;
    justify-self: center;
} */

select {
    background-color: var(--color--background);
    color: var(--color--primary);
    border: 0px solid transparent;
    cursor: pointer;
    transition: 150ms ease-in-out;
}

select:focus {
    outline: none;
    color: var(--color--secondary)
}

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--color--secondary);
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 34px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: var(--color--primary);
}

input:focus + .slider {
    box-shadow: 0 0 1px var(--color--primary);
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

a.button {
    margin: 0.5rem;
    color: var(--color--secondary);
    border-bottom: 2px solid transparent;
    cursor: pointer;
    transition: 100ms;
}
a.button:hover {
    border-bottom: 2px solid var(--color--secondary);
}


/* Game Board */
section#game {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;

    position: relative;
}

div.board {
    width: calc(100vw - 2rem);

    display: grid;
    grid-template-rows: repeat(6, 1fr);
    grid-template-columns: repeat(7, 1fr);
    gap: 1rem;
}

div.board div.row {
    display: grid;
    gap: 0.5rem;
}

/* Game Cell */
div.cell {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;

    border: 1px dotted var(--color--text);
    border-radius: 100%;

    aspect-ratio: 1;
    cursor: pointer;

    transition: 300ms ease-in-out background-color;
}

[data-turn='1'] div.cell:hover {
    background-color: var(--color--player-1-hover);
}
[data-turn='2'] div.cell:hover {
    background-color: var(--color--player-2-hover);
}


div.cell[data-selected='player1'] {
    background-color: var(--color--player-1);
}
div.cell[data-selected='player2'] {
    background-color: var(--color--player-2);
}

